# API-Agent

./: check_test9.py  query_db.py
api-platform/: .env.example  .gitignore  Makefile  README.md  check_pwd.py  check_user.py  debug_login.py  final_result.txt  fix_mock_payment.py  migrate_trial_fields.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  result.txt  run_test.ps1  show_users.py  test_analytics.py  test_bcrypt.py  test_login.py  test_output.txt  update_pwd.py  update_pwd_sync.py  verify_pwd.py  verify_update.py
api-platform/config/: .env.example  logging.conf
api-platform/docker/: .env.example  Dockerfile  Dockerfile.dev  deploy.sh  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile  nginx.conf
api-platform/docs/: DEVELOPMENT_GUIDE.md  LOGGING_GUIDE.md  ROLE_PERMISSION_GUIDE.md  TEST_PLAN.md  TEST_QUICK_REFERENCE.md  TEST_REPORT.md  TEST_SETUP.md  Test_ALL_PLAN.md  WINDOWS_FRONTEND_ENVIRONMENT.md  WINDOWS_TEST_ENVIRONMENT.md
api-platform/migrations/: add_bill_environment.py  add_encrypted_key.py  add_monthly_bills.py  add_recharge_package_fields.py  add_request_id_column.py  add_user_fields.py  run_v5_logo_migration.py  schema_users.sql  update_user_data.py
api-platform/scripts/: check_tables.py  debug_test.py  final_test.py  fix_weather_endpoints.py  fix_weather_endpoints_sync.py  init_db.py  init_db_with_data.py  init_logs.py  migrate_add_request_params_tester.py  migrate_api_call_logs.py  migrate_notifications.py  migrate_reconciliation.py  quick_migrate.py  seed_data.py  seed_endpoints.py  seed_roles.py  (+11 more)
(+404 files in other folders)
